# vibium

./: .gitignore  CONTRIBUTING.md  FILESYSTEM.md  Makefile  README.md  V2-ROADMAP.md  package-lock.json  package.json
clicker/cmd/clicker/: main.go
clicker/internal/bidi/: session.go
clicker/internal/browser/: installer.go  launcher.go
clicker/internal/mcp/: schema.go
clicker/internal/paths/: paths.go
clicker/internal/proxy/: router.go
clients/javascript/: package.json
clients/javascript/src/bidi/: client.ts
clients/python/: pyproject.toml
docs/how-to-guides/: npm-publishing.md  publishing-new-releases.md  pypi-publishing.md
docs/tutorials/: claude-code-mcp-setup.md  gemini-cli-mcp-setup.md  getting-started-mcp.md  getting-started.md
docs/updates/: 2025-12-16-week1-progress.md
tests/js/: auto-wait.test.js
