[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibium"
version = "0.1.4"
description = "Browser automation for AI agents and humans"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.9"
authors = [
    { name = "Jason Huggins", email = "hugs@vibium.com" }
]
dependencies = [
    "websockets>=14.2",
    # Platform-specific binary packages
    "vibium-darwin-arm64>=0.1.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "vibium-darwin-x64>=0.1.4; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "vibium-linux-x64>=0.1.4; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "vibium-linux-arm64>=0.1.4; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "vibium-win32-x64>=0.1.4; sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[project.scripts]
vibium = "vibium.cli:main"

[project.urls]
Homepage = "https://vibium.com"
Repository = "https://github.com/VibiumDev/vibium"
Issues = "https://github.com/VibiumDev/vibium/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/vibium"]
